--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.1",
 		"vite": "^7.1.7"
+	},
+	"dependencies": {
+		"firebase": "^12.4.0",
+		"firebase-admin": "^13.5.0"
 	}
 }
